app/src/main/java/com/example/truckercore/shared/errors/RemovalException.kt
package com.example.truckercore.shared.errors

abstract class RemovalException(message: String? = null, cause: Exception? = null) :
    Exception(message, cause)